網站文字更新

--- a/app/views/layouts/備份_application.html.erb
+++ b/app/views/layouts/備份_application.html.erb
@@ -148,36 +148,37 @@ $(document).ready(function(){
        <div id="qa-nav" class="qa">
         <h3>中小企業貸款常見問題</h3>
         <div class="text">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tr class="qq">
-                <th align="left" valign="top">Q：</th>
-                <td align="left" valign="top">什麼是信保基金？</td>
-              </tr>
-              <tr class="aa">
-                <th align="left" valign="top">A：</th>
-                <td align="left" valign="top">信保基金（中小企業信用保證基金）是政府出資80%以上的公益財團法人，專為擔保品不 
-                  足的中小企業提供信用保證，使其順利融資。<br>
-                <br></td>
-              </tr>
-              <tr class="qq">
-                <th align="left" valign="top">Q：</th>
-                <td align="left" valign="top">貸款最容易卡在哪一關？</td>
-              </tr>
-              <tr class="aa">
-                <th align="left" valign="top">A：</th>
-                <td align="left" valign="top">擔保品不足、找不到保人，是企業與個人貸款最常見的問題，遠東貸款授信團隊經由專業評估，能透過信保基金或合法融資公司（例如和潤企業）來協助您順利貸款。<br>
-                <br></td>
-              </tr>
-              <tr class="qq">
-                <th align="left" valign="top">Q：</th>
-                <td align="left" valign="top">聯徵（金融聯合信用徵信）次數過多，會影響企業貸款的核准率嗎？</td>
-              </tr>
-              <tr class="aa">
-                <th align="left" valign="top">A：</th>
-                <td align="left" valign="top">一般來說，新業務查詢超過4次，過件率就會降到50%，但還要看銀行查詢項目、企業與個人的屬性及優缺點等，通常企業主或一般民眾不可能花時間一一研究各家銀行的規定，所以交由貸款授信專業人士來篩選與配對，是避免聯徵多查、影響核准率最快速簡便的途徑 。</td>
-              </tr>
-            </table>
-          </div>
+           <table width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr class="qq">
+               <th align="left" valign="top">Q：</th>
+               <td align="left" valign="top">什麼是信保基金？</td>
+             </tr>
+            <tr class="aa">
+               <th align="left" valign="top">A：</th>
+               <td align="left" valign="top">信保基金（中小企業信用保證基金）是政府出資80%以上的公益財團法人，專為擔保品不 
+                足的中小企業提供信用保證，使其順利融資。<br><br></td>
+             </tr>
+            <tr class="qq">
+               <th align="left" valign="top">Q：</th>
+               <td align="left" valign="top">貸款最容易卡在哪一關？</td>
+             </tr>
+            <tr class="aa">
+               <th align="left" valign="top">A：</th>
+               <td align="left" valign="top">擔保品不足、找不到保人，是中小企業貸款最常見的問題，遠東貸款授信團隊經由專業評
+                估，能透過信保基金或合法融資公司（例如和潤企業）來協助您順利貸款。<br><br></td>
+             </tr>
+            <tr class="qq">
+               <th align="left" valign="top">Q：</th>
+               <td align="left" valign="top">聯徵（金融聯合信用徵信）次數過多，會影響企業貸款的核准率嗎？</td>
+             </tr>
+            <tr class="aa">
+               <th align="left" valign="top">A：</th>
+               <td align="left" valign="top">一般來說，新業務查詢超過4次，過件率就會降到50%，但還要看銀行查詢項目及企業屬性
+                與優缺點，通常企業主不可能花時間一一研究各家銀行的規定，所以交由貸款授信專業人
+                士來篩選與配對，是避免聯徵多查、影響核准率最快速簡便的途徑 。</td>
+             </tr>
+          </table>
+         </div>
       </div><!--qa-->
      </nav>
   </section>
