--- a/app/views/tickets/備份_mobile.html.erb
+++ b/app/views/tickets/備份_mobile.html.erb
@@ -60,16 +60,7 @@ function wrapper_back(){
 	$('#top').stop().animate({left:'0%'},'easeOutBack');
 }
 </script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-44702357-1', 'iwantmoney.com.tw');
-  ga('send', 'pageview');
-
-</script>
 </head>
 
 <body>
@@ -95,12 +86,12 @@ function wrapper_back(){
   </div>
   <div id="article">
     <div id="content-1" class="content">
-      <h3>借錢有三難</h3>
+      <h3>中小企業借錢有三難</h3>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #FC6E51"><img src="/images/mb-06a.jpg"></td>
-          <td width="34%" align="center" valign="middle" style="border-bottom:3px solid #48CFAD;border-left:2px solid #CAE8F3;border-right:2px solid #CAE8F3"><img src="/images/mb-06b.jpg"></td>
-          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #AC92EC"><img src="/images/mb-06c.jpg"></td>
+          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #FC6E51"><img width="82" src="/images/mb-06a.jpg"></td>
+          <td width="34%" align="center" valign="middle" style="border-bottom:3px solid #48CFAD;border-left:2px solid #CAE8F3;border-right:2px solid #CAE8F3"><img width="104" src="/images/mb-06b.jpg"></td>
+          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #AC92EC"><img width="82" src="/images/mb-06c.jpg"></td>
         </tr>
       </table>
       <p> 其實，合法貸款的管道很多<br>
@@ -111,7 +102,7 @@ function wrapper_back(){
     <div id="content-2" class="content">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td align="center" style="background:#F7F8FC"><img src="/images/mb-07.jpg">
+          <td align="center" style="background:#F7F8FC"><img width="113" src="/images/mb-07.jpg">
             <p><b>貸款高手</b><br>
               全程免費服務</p></td>
           <td><ul>
@@ -144,13 +135,13 @@ function wrapper_back(){
       </ul>
       <h4>融資專案 2</h4>
       <ul>
-        <li>適合名下具有不動產者</li>
-        <li>額度：新台幣1億元以內</li>
+        <li>適合小型企業成長期</li>
+        <li>額度：300萬～1,000萬</li>
       </ul>
       <h4>融資專案 3</h4>
       <ul>
-        <li>適合中小企業成長期</li>
-        <li>額度：1,000 萬以內</li>
+        <li>適合網拍、微型企業</li>
+        <li>額度：10萬～300萬</li>
       </ul>
       <br>
     </div>
