--- a/app/views/tickets/備份_new.html.erb
+++ b/app/views/tickets/備份_new.html.erb
@@ -47,13 +47,13 @@ break;
           <div class="left"> <img id="changeArea2" src="/images/yg-01.gif" data-img="0"> </div>
           <!--left-->
           <div class="right">
-            <h3>借錢的麻煩，我們很清楚：</h3>
+            <h3>中小企業老闆，借錢的麻煩，我們很清楚：</h3>
             <ul>
-              <li>企業成長或人生關鍵時刻，銀行卻拒絕貸款，四處碰壁</li>
+              <li>企業成長的關鍵時刻，銀行卻拒絕貸款，四處碰壁</li>
               <li>擔保品不足，找不到保人，難道只能找地下錢莊？</li>
               <li>代辦業者收取高額手續費，或巧立名目收費，您只能任人宰割</li>
-              <li>時間緊迫，很怕貸不下來，也很怕利率太高增加貸款成本</li>
-              <p>遇到資金缺口時，最怕就是病急亂投醫，借東牆補西牆，甚至逼不得已透過民間借貸、高利貸來周轉，事實上，合法貸款的管道很多，但這是很專業的金融知識，因此誠摯建議您不要獨自摸索，只要找對專家，就能快速為您找到最適合的資金管道，<strong>遠東貸款授信團隊</strong>提供免費諮詢和到府評估 <br>
+              <li>時間緊迫，很怕貸不下來，也很怕利率太高增加企業成本</li>
+              <p>中小企業在遇到資金緊張時，最怕就是病急亂投醫，借東牆補西牆，甚至逼不得已透過民間借貸、高利貸來周轉，事實上，合法貸款的管道很多，但這是很專業的金融知識，因此誠摯建議您不要獨自摸索，只要找對專家，就能快速為您找到最適合的資金管道，<strong>遠東貸款授信團隊</strong>提供免費諮詢和到府評估 <br>
                 <span>歡迎打免付費電話 <a href="tel:0800-018-555" class="track">0800-018-555</a>，我們將竭誠為您服務。</span> </p>
             </ul>
           </div>
@@ -72,12 +72,12 @@ break;
           <div class="left"><img src="/images/lsb-01.jpg"></div>
           <!--left-->
           <div class="right">
-            <h3>遠東貸款授信團隊—您創業與築夢的好幫手</h3>
+            <h3>遠東貸款授信團隊—您創業路上的好幫手</h3>
             <ul>
               <li>由銀行授信副理、高階主管組成，正派、合法，非民間代辦業者</li>
-              <li>2011~2013 年融資貸放金額近 1,000 億元</li>
-              <li>熟悉貸款多元管道，評估準確，過件成功率高達 90% 以上</li>
-              <li>平均 7 個工作天過件成功，幫您快速、簡便渡過短期困難</li>
+              <li>2011~2013年融資貸放金額近2億元</li>
+              <li>熟悉貸款多元管道，評估準確，過件成功率高達90%以上</li>
+              <li>平均7個工作天過件成功，幫企業快速、簡便渡過短期困難</li>
             </ul>
           </div>
           <!--right--> 
@@ -96,12 +96,12 @@ break;
     <section class="vert">
       <section class="limit">
         <h3>全程不收費，請您安心、放心</h3>
-        <p>借錢是一門學問，很多老闆或民眾自己找銀行卻不得其門而入，所以才有民間代辦業者生存的空間，但代辦業者往往趁人之危收取高額手續費，或巧立名目收取各種費用，您雖然借到錢卻要吃不少虧。<br>
-          遠東團隊的成員都是有專業金融知識的資深銀行人士，我們免費服務，流程透明，善用專業和人脈幫企業與個人解套救急、穩健成長，歡迎您隨時找我們諮詢評估。</p>
+        <p>借錢是一門學問，很多老闆自己找銀行卻不得其門而入，所以才有民間代辦業者生存的空間，但代辦業者往往趁人之危收取高額手續費，或巧立名目收取各種費用，老闆雖然借到錢卻要吃不少虧。<br>
+          遠東團隊的成員都是有專業金融知識的資深銀行人士，我們免費服務，流程透明，善用專業和人脈幫中小企業解套救急、穩健成長，歡迎您隨時找我們諮詢評估。</p>
         <div class="chart"><img src="/images/k-01.png" id="cht-01" class="cht"> <img src="/images/k-02.png" id="cht-02" class="cht"> <img src="/images/k-03.png" id="cht-03" class="cht"> <img src="/images/k-04.png" id="cht-04" class="cht"> <img src="/images/k-05.png" id="cht-05" class="cht"> <img src="/images/k-06.png" id="cht-06" class="cht"></div>
-        <div class="qa-link"><a href="#" id="call-qa-article">企業與個人貸款常見問題</a>
+        <div class="qa-link"><a href="#" id="call-qa-article">中小企業貸款常見問題</a>
           <div id="qa-article" class="qa">
-            <h3>企業與個人貸款常見問題</h3>
+            <h3>中小企業貸款常見問題</h3>
             <div class="text">
               <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr class="qq">
@@ -120,17 +120,19 @@ break;
                 </tr>
                 <tr class="aa">
                   <th align="left" valign="top">A：</th>
-                  <td align="left" valign="top">擔保品不足、找不到保人，是企業與個人貸款最常見的問題，遠東貸款授信團隊經由專業評
+                  <td align="left" valign="top">擔保品不足、找不到保人，是中小企業貸款最常見的問題，遠東貸款授信團隊經由專業評
                     估，能透過信保基金或合法融資公司（例如和潤企業）來協助您順利貸款。<br>
                     <br></td>
                 </tr>
                 <tr class="qq">
                   <th align="left" valign="top">Q：</th>
-                  <td align="left" valign="top">聯徵（金融聯合信用徵信）次數過多，會影響貸款的核准率嗎？</td>
+                  <td align="left" valign="top">聯徵（金融聯合信用徵信）次數過多，會影響企業貸款的核准率嗎？</td>
                 </tr>
                 <tr class="aa">
                   <th align="left" valign="top">A：</th>
-                  <td align="left" valign="top">一般來說，新業務查詢超過4次，過件率就會降到50%，但還要看銀行查詢項目、企業與個人的屬性及優缺點等，通常企業主或一般民眾不可能花時間一一研究各家銀行的規定，所以交由貸款授信專業人士來篩選與配對，是避免聯徵多查、影響核准率最快速簡便的途徑 。</td>
+                  <td align="left" valign="top">一般來說，新業務查詢超過4次，過件率就會降到50%，但還要看銀行查詢項目及企業屬性
+                    與優缺點，通常企業主不可能花時間一一研究各家銀行的規定，所以交由貸款授信專業人
+                    士來篩選與配對，是避免聯徵多查、影響核准率最快速簡便的途徑 。</td>
                 </tr>
               </table>
             </div>
@@ -144,7 +146,7 @@ break;
   <article id="PaleTurquoise" class="wipe"> <a id="pt-anchor" class="anchor">&nbsp;</a> <img src="/images/pt-04.png" id="dcr-04" class="dcr"> <img src="/images/pt-05.png" id="dcr-05" class="dcr"> <img src="/images/pt-06.png" id="dcr-06" class="dcr">
     <section class="vert">
       <section class="limit">
-        <h3>適合企業與個人的<br>
+        <h3>適合中小企業的<br>
           融資專案</h3>
         <div id="pj-05" class="pj clear">
           <div class="left">
@@ -176,29 +178,31 @@ break;
         </div>
         <div id="pj-01" class="pj clear">
           <div class="left">
-            <h4>融資專案2<span>擔保放款融資專案</span></h4>
+            <h4>融資專案2<span>中小企業融資專案</span></h4>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <th width="25%" align="left" valign="top" >適合對象：</th>
-                <td width="75%" align="left" valign="top">名下具有不動產</td>
+                <td width="75%" align="left" valign="top">公司成立2年以上<br>
+                  營收3000萬以上</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款額度：</th>
-                <td align="left" valign="top">新台幣一億元以內</td>
+                <td align="left" valign="top">最高1000萬</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款利率：</th>
-                <td align="left" valign="top">1.86%~2.38%</td>
+                <td align="left" valign="top">3%~8%</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款期間：</th>
-                <td align="left" valign="top">10年~30年</td>
+                <td align="left" valign="top">1~3年</td>
               </tr>
             </table>
           </div>
           <div class="right"> <img src="/images/pt-01.png" width="114" height="134">
-            <h5>不動產擔保，銀行核貸意願高</h5>
-            <p>O捷企業社是剛成立的小公司，申請青創協會的青年貸款卻未獲核准，因為公司正在草創時期，沒有任何財報紀錄，後來經由遠東貸款授信團隊專業評估與建議，利用申請人名下房屋給安泰銀行作二順位設定，即順利取得資金。</p>
+            <h5>貸款不是問題，額度才是關鍵</h5>
+            <p>O藝生技專門研發美容保養品，公司經營得有聲有色，唯獨醫學美容中心的業績始終墊底，於是李老闆決定以電視購物和網路行銷挽回逆勢，評估約需500萬資金，但問遍各家銀行，最多只能貸到350萬，總是差那麼一截。
+              後來經由遠東貸款授信團隊專業評估與建議，終於獲得台灣中小企業銀行經理傾曩相助 ，願意本人授權拉高額度到500萬，資金到位後果然讓李老闆打了一場漂亮的行銷戰，像O藝生技這樣規模的公司，其實都是銀行樂於往來的對象，重點在於貸款額度能否滿足業主的需求，授信團隊的專業和人脈就很重要。</p>
           </div>
         </div>
         <div id="pj-02" class="pj clear">
@@ -232,59 +236,58 @@ break;
         </div>
         <div id="pj-03" class="pj clear">
           <div class="left">
-            <h4>融資專案4<span>信用貸款融資專案</span></h4>
+            <h4>融資專案4<span>小型商店融資專案</span></h4>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <th width="25%" align="left" valign="top" >適合對象：</th>
-                <td width="75%" align="left" valign="top">一般上班族或專業證照人士</td>
+                <td width="75%" align="left" valign="top">公司3人以下<br>
+                  刷單10萬元以上</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款額度：</th>
-                <td align="left" valign="top">10萬~500萬</td>
+                <td align="left" valign="top">40萬~300萬</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款利率：</th>
-                <td align="left" valign="top">1.88%~9.99%</td>
+                <td align="left" valign="top">9.38%~10.38%</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款期間：</th>
-                <td align="left" valign="top">12期~84期</td>
+                <td align="left" valign="top">12期~15期</td>
               </tr>
             </table>
           </div>
           <div class="right"> <img src="/images/pt-01.png" width="114" height="134">
-            <h5>無房產、車輛擔保，最適合信貸融資</h5>
-            <p>王Ｏ民是一位認真工作的上班族，想在台北東區投資一間實體店面，完成開店夢想，但因為鮮少與銀行往來，不知如何向銀行申請貸款，經由遠東貸款授信團隊專業評估與建議，最後順利讓安泰銀行核准撥款，一般上班族通常很適合信用貸款專案。</p>
+            <h5>無財報、網路賣家，最適合刷卡機融資</h5>
+            <p>OO手作坊是一間才成立半年的網拍工作室，隨著網拍業績蒸蒸日上，許老闆想在台北東區租一個實體店面，完成開店夢想，但因為沒有財務報表，不知如何向銀行申請貸款，經由遠東貸款授信團隊專業評估與建議，最後順利讓台新銀行核准撥款，個人工作室、網拍小賣家通常很適合刷卡機貸款專案。</p>
           </div>
         </div>
         <div id="pj-04" class="pj clear">
           <div class="left">
-            <h4>融資專案5<span>中小企業融資專案</span></h4>
+            <h4>融資專案5<span>擔保放款融資專案</span></h4>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <th width="25%" align="left" valign="top" >適合對象：</th>
-                <td width="75%" align="left" valign="top">公司成立2年以上<br>
-                  營收3,000萬以上</td>
+                <td width="75%" align="left" valign="top">公司負責人或負責人<br>
+                  配偶具有不動產</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款額度：</th>
-                <td align="left" valign="top">最高1,000萬</td>
+                <td align="left" valign="top">新台幣一億元以內</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款利率：</th>
-                <td align="left" valign="top">3%~8%</td>
+                <td align="left" valign="top">1.38%~2.38%</td>
               </tr>
               <tr>
                 <th align="left" valign="top">貸款期間：</th>
-                <td align="left" valign="top">1~3年</td>
+                <td align="left" valign="top">20年~30年</td>
               </tr>
             </table>
           </div>
           <div class="right"> <img src="/images/pt-01.png" width="114" height="134">
-            <h5>貸款不是問題，額度才是關鍵</h5>
-            <p>O藝生技專門研發美容保養品，公司經營得有聲有色，唯獨醫學美容中心的業績始終墊底，於是李老闆決定以電視購物和網路行銷挽回逆勢，評估約需500萬資金，但問遍各家銀行，最多只能貸到350萬，總是差那麼一截。<br>
-<br>
-後來經由遠東貸款授信團隊專業評估與建議，終於獲得台灣中小企業銀行經理傾曩相助，願意本人授權拉高額度到500萬，資金到位後果然讓李老闆打了一場漂亮的行銷戰，像O藝生技這樣規模的公司，其實都是銀行樂於往來的對象，重點在於貸款額度能否滿足業主的需求，授信團隊的專業和人脈就很重要。</p>
+            <h5>不動產擔保，銀行核貸意願高</h5>
+            <p>O捷企業社是剛成立的小公司，申請青創協會的青年貸款卻未獲核准，因為公司正在草創時期，沒有任何財報紀錄，後來經由遠東貸款授信團隊專業評估與建議，請公司負責人的太太用名下房屋給台新銀行作二順位設定，即順利取得資金。</p>
           </div>
         </div>
       </section>
