--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/*---------------------------------------------------------------------------------------------------- 全域 ---*/
+﻿/*---------------------------------------------------------------------------------------------------- 全域 ---*/
 
 html{width:100%;height:100%}
 body{font:300 18px 微軟正黑體,"Microsoft JhengHei";width:100%;min-width:1280px;height:100%;line-height:2em}
@@ -55,7 +55,7 @@ height:102px;text-shadow:-1px 1px 1px #485561;padding:30px 0 0 67px!important;bo
 
 #DarkRed{border-top:1px solid #C3222A;text-align:center;background: url(../images/dr-bg.jpg) center center no-repeat #931E24}
 #DarkRed .limit{position:relative;z-index:2}
-#DarkRed h3{text-indent:-7777px;background:url(../images/dr-01.png) 0 0 no-repeat;width:1064px;height:148px;margin:0 auto 13% auto}
+#DarkRed h3{text-indent:-7777px;background:url(../images/dr-01.png) 0 0 no-repeat;width:1200px;height:137px;margin:0 auto 13% auto}
 
 /*---------------------------------------------------------------------------------------------------- 全域 ---*/
 
